[MOSIP-552] Packet receiver added. Node port access opened for HDFS as there is a bug in packet receiver as it tries to access HDFS, though it shouldn't.

--- a/deployment/sandbox-v2/app/roles/hdfs/templates/k8s_hdfs.yml.j2
+++ b/deployment/sandbox-v2/app/roles/hdfs/templates/k8s_hdfs.yml.j2
@@ -39,6 +39,7 @@ metadata:
   name: {{hdfs_name}}
   namespace: default
 spec:
+  type: NodePort
   ports:
   - name: hdfs1 
     port: 50070
@@ -46,6 +47,7 @@ spec:
   - name: hdfs2
     port: 9000
     targetPort: 9000
+    nodePort: {{hdfs_nodeport}}  #TODO: done only for dmz. Remove it after bug is fixed. dmz should not be accessing hdfs.
   - name: hdfs3
     port: 50075
     targetPort: 50075
