--- a/deployment/sandbox-v2/app/roles/clamav/templates/k8s_clamav.yml.j2
+++ b/deployment/sandbox-v2/app/roles/clamav/templates/k8s_clamav.yml.j2
@@ -40,6 +40,8 @@ metadata:
 spec:
   selector:
     app: {{clamav_name}}
+  type: NodePort
   ports:
     - port: 80 
       targetPort: {{clamav_container_port}} 
+      nodePort: {{clamav_nodeport}} 
