[MOSIP-552] Camel, reg_status added. Bugs fixed.

--- a/deployment/sandbox-v2/app/roles/regproc/packet-receiver/templates/k8s_packet_receiver.yml.j2
+++ b/deployment/sandbox-v2/app/roles/regproc/packet-receiver/templates/k8s_packet_receiver.yml.j2
@@ -5,7 +5,7 @@ metadata:
   name: {{regproc_packet_receiver_name}}
   namespace: default
   labels:
-    module: pre-reg
+    module: regproc
 spec:
   replicas: 1
   selector:
@@ -21,7 +21,8 @@ spec:
     metadata:
       labels:
         app: {{regproc_packet_receiver_name}}
-        module: pre-reg
+        module: regproc
+        component: service-hazelcast-server
     spec:
       containers:
       - name: {{regproc_packet_receiver_name}}
