--- a/deployment/sandbox-v2/app/roles/regproc/packet-receiver/templates/k8s_receiver_pvc.yml.j2
+++ b/deployment/sandbox-v2/app/roles/regproc/packet-receiver/templates/k8s_receiver_pvc.yml.j2
@@ -6,6 +6,7 @@ metadata:
   name: {{regproc_landing_pvc_name}} 
   labels:
     app: {{regproc_landing_pvc_name}}
+    module: regproc
 spec:
   storageClassName: local-storage
   volumeMode: Filesystem
@@ -24,6 +25,7 @@ metadata:
   name: {{regproc_archival_pvc_name}} 
   labels:
     app: {{regproc_archival_pvc_name}} 
+    module: regproc
 spec:
   storageClassName: local-storage
   volumeMode: Filesystem
