[MOSIP-552] camel mz and uploader added.

--- a/deployment/sandbox-v2/app/roles/regproc/packet-receiver/templates/k8s_packet_receiver.yml.j2
+++ b/deployment/sandbox-v2/app/roles/regproc/packet-receiver/templates/k8s_packet_receiver.yml.j2
@@ -39,7 +39,12 @@ spec:
         - name: is_glowroot_env
           value: absent
         ports:
-        - containerPort: {{regproc_packet_receiver_container_port}}
+          - name: eventbus-port
+            containerPort: 5723
+          - name: hazelcast-port
+            containerPort: 5701
+          - name: verticle-port
+            containerPort: {{regproc_packet_receiver_container_port}}
         readinessProbe:
           tcpSocket:
             port: {{regproc_packet_receiver_container_port}}  
