--- a/deployment/sandbox-v2/roles/regproc/camel-mz/templates/k8s_camel_mz.yml.j2
+++ b/deployment/sandbox-v2/roles/regproc/camel-mz/templates/k8s_camel_mz.yml.j2
@@ -5,7 +5,7 @@ metadata:
   name: {{regproc_camel_mz_name}}
   namespace: default
   labels:
-    module: reproc
+    module: regproc
 spec:
   replicas: 1
   selector:
@@ -21,7 +21,7 @@ spec:
     metadata:
       labels:
         app: {{regproc_camel_mz_name}}
-        module: reproc
+        module: regproc
         component: service-hazelcast-server
     spec:
       containers:
@@ -33,7 +33,7 @@ spec:
         - name: spring_config_label_env
           value: master
         - name: spring_config_url_env
-          value: {{config_server_external_url}}  # Config server is on MZ cluster
+          value: {{config_server_url}}  # Config server is on MZ cluster
         - name: zone_env
           value: secure 
         - name: artifactory_url_env
