--- a/deployment/sandbox-v2/roles/pre-reg/pre-reg-ui/templates/k8s_pre_reg_config.yml.j2
+++ b/deployment/sandbox-v2/roles/pre-reg/pre-reg-ui/templates/k8s_pre_reg_config.yml.j2
@@ -1,6 +1,6 @@
 apiVersion: v1
 data:
-  config.json: '{"BASE_URL":"{{pre_reg_api_host}}",  "PRE_REG_URL" : "preregistration/v1/"}'
+  config.json: '{"BASE_URL":"{{pre_reg_api_host}}",  "PRE_REG_URL" : "/preregistration/v1/"}'
 kind: ConfigMap
 metadata:
   name: {{pre_reg_ui_config_name}}
