--- a/deployment/sandbox-v2/roles/ingress/mz-ingress/templates/k8s_ingress.yml.j2
+++ b/deployment/sandbox-v2/roles/ingress/mz-ingress/templates/k8s_ingress.yml.j2
@@ -106,6 +106,37 @@ spec:
           serviceName: {{regproc_packet_uploader_name}}
           servicePort: 80
 
+      - path: /idauthentication/v1/auth
+        backend:
+          serviceName: {{ida_service_name}}
+          servicePort: 80
+
+      - path: /idauthentication/v1/kyc
+        backend:
+          serviceName: {{ida_kyc_name}}
+          servicePort: 80
+
+      - path: /idauthentication/v1/otp
+        backend:
+          serviceName: {{ida_otp_name}}
+          servicePort: 80
+
+      - path: /idauthentication/v1/internal
+        backend:
+          serviceName: {{ida_internal_name}}
+          servicePort: 80
+
+      - path: /idrepository/v1/identity
+        backend:
+          serviceName: {{idrepo_identity_name}}
+          servicePort: 80
+
+      - path: /idrepository/v1/
+        backend:
+          serviceName: {{idrepo_vid_name}}
+          servicePort: 80
+
+
 ---
 # We have written a separate ingress for keycloak 'cause it requires
 # a different rewrite rule.  We want keycloak url to be 
