[MOSIP-681] Persistence in HDFS temporarily disabled due to issues.

--- a/deployment/sandbox-v2/roles/hdfs/templates/helm_hdfs_values.yml.j2
+++ b/deployment/sandbox-v2/roles/hdfs/templates/helm_hdfs_values.yml.j2
@@ -72,13 +72,13 @@ yarn:
 
 persistence:
   nameNode:
-    enabled: true
+    enabled: false
     storageClass: "hdfs-nn-local-storage"
     accessMode: ReadWriteOnce
     size: 6Gi
 
   dataNode:
-    enabled: true
+    enabled: false
     storageClass: "hdfs-dn-local-storage"
     accessMode: ReadWriteOnce
     size: 6Gi
