--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -125,7 +125,7 @@ http {
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_set_header X-Forwarded-Proto $scheme;
-           proxy_pass {{ingress_base_url}}/idauthentication/v1/auth/;
+           proxy_pass {{mzingress.base_url}}/idauthentication/v1/auth/;
            }
 
 	location /idauthentication/v1/kyc/ {
@@ -133,7 +133,7 @@ http {
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_set_header X-Forwarded-Proto $scheme;
-	   proxy_pass {{ingress_base_url}}/idauthentication/v1/kyc/;
+	   proxy_pass {{mzingress.base_url}}/idauthentication/v1/kyc/;
            }
 
 	location /idauthentication/v1/otp/ {
@@ -141,7 +141,7 @@ http {
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_set_header X-Forwarded-Proto $scheme;
-	   proxy_pass {{ingress_base_url}}/idauthentication/v1/otp/;
+	   proxy_pass {{mzingress.base_url}}/idauthentication/v1/otp/;
            }
 
         error_page 404 /404.html;
