--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -216,6 +216,14 @@ http {
            proxy_pass {{mzingress.base_url}}/admin-ui/;
            }
 
+        location /resident/v1/ {
+           proxy_set_header Host $host;
+           proxy_set_header X-Real-IP $remote_addr;
+           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+           proxy_set_header X-Forwarded-Proto $scheme;
+           proxy_pass {{mzingress.base_url}}/resident/v1/;
+           }
+
         error_page 404 /404.html;
             location = /40x.html {
         }
