--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -112,6 +112,14 @@ http {
            proxy_pass {{mzingress.base_url}}/v1/masterdata/;
            }
 
+        location /v1/keymanager/ {
+           proxy_set_header Host $host;
+           proxy_set_header X-Real-IP $remote_addr;
+           proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+           proxy_set_header X-Forwarded-Proto $scheme;
+           proxy_pass {{mzingress.base_url}}/v1/keymanager/;
+           }
+
         location /v1/syncdata/ {
            proxy_set_header Host $host;
            proxy_set_header X-Real-IP $remote_addr;
