--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -208,12 +208,12 @@ http {
 	   proxy_pass {{mzingress.base_url}}/partnermanagement/v1/pmpartners/;
            }
 
-        location /admin/v1/ {
+        location /v1/admin/ {
            proxy_set_header Host $host;
            proxy_set_header X-Real-IP $remote_addr;
            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
            proxy_set_header X-Forwarded-Proto $scheme;
-           proxy_pass {{mzingress.base_url}}/admin/v1/;
+           proxy_pass {{mzingress.base_url}}/v1/admin/;
            }
 
         location /admin-ui/ {
