Nginx URLs corrected.

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -109,15 +109,15 @@ http {
         }
 
         location /v1/idgenerator/ {
-           proxy_pass {{mzingress.base_url}}/v1/idegenator/;
+           proxy_pass {{mzingress.base_url}}/v1/idgenerator/;
         }
 
         location /v1/ridgenerator/ {
-           proxy_pass {{mzingress.base_url}}/v1/ridegenator/;
+           proxy_pass {{mzingress.base_url}}/v1/ridgenerator/;
         }
 
         location /v1/pridgenerator/ {
-           proxy_pass {{mzingress.base_url}}/v1/pridegenator/;
+           proxy_pass {{mzingress.base_url}}/v1/pridgenerator/;
         }
 
         location /v1/otpmanager/ {
