idrepo external url corrected.

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -161,7 +161,7 @@ http {
            proxy_pass {{mzingress.base_url}}/idrepository/v1/identity/;
         }
 
-        location /idrepository/v1/vid/ {
+        location /idrepository/v1/ {
            proxy_pass {{mzingress.base_url}}/idrepository/v1/vid/;
         }
 
