--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -163,7 +163,7 @@ http {
 
         # Note the below is for VID access.        
         location /idrepository/v1/ {
-           proxy_pass http://mzworker0:30080/idrepository/v1/;                                                                         
+           proxy_pass {{mzingress.base_url}/idrepository/v1/;                                                                         
          }
 
 
@@ -176,7 +176,15 @@ http {
         }
 
         location /registrationprocessor/v1/securezone/ {
-           proxy_pass http://dmzworker0:30080/registrationprocessor/v1/securezone/;
+           proxy_pass {{mzingress.base_url}}/registrationprocessor/v1/securezone/;
+        }
+
+	location /registrationprocessor/v1/manualverification/ {
+	   proxy_pass {{mzingress.base_url}/registrationprocessor/v1/manualverification/;
+        }
+
+	location /registrationprocessor/v1/requesthandler/ {
+	   proxy_pass {{mzingress.base_url}}/registrationprocessor/v1/requesthandler/;
         }
 
 
