[MOSIP-552] Transaction service route added in nginx.

--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -187,6 +187,9 @@ http {
 	   proxy_pass {{mzingress.base_url}}/registrationprocessor/v1/requesthandler/;
         }
 
+        location /registrationprocessor/v1/registrationtransaction/ {
+           proxy_pass {{mzingress.base_url}}/registrationprocessor/v1/registrationtransaction/;
+        }
 
         location /partnermanagement/v1/misps/ {
            proxy_pass {{mzingress.base_url}}/partnermanagement/v1/misps/;
