--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -207,6 +207,14 @@ http {
            proxy_pass {{mzingress.base_url}}/partnermanagement/v1/pmpartners/;
         }
 
+        location /mz-dashboard/ {
+           proxy_pass  http://localhost:{{mz_dashboard_port}}/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/;
+        }
+
+        location /dmz-dashboard/ {
+           proxy_pass  http://localhost:{{dmz_dashboard_port}}/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/;
+        }
+
         location /v1/admin/ {
            proxy_pass {{mzingress.base_url}}/v1/admin/;
         }
