--- a/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
+++ b/deployment/sandbox-v2/roles/nginx/templates/nginx_https_conf.yml.j2
@@ -212,11 +212,11 @@ http {
         }
 
         location /mz-dashboard/ {
-           proxy_pass  http://localhost:{{mz_dashboard_port}}/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/;
+           proxy_pass {{mzingress.base_url}}/{{clusters.mz.dashboard.url}}/;
         }
 
         location /dmz-dashboard/ {
-           proxy_pass  http://localhost:{{dmz_dashboard_port}}/api/v1/namespaces/kubernetes-dashboard/services/https:kubernetes-dashboard:/proxy/;
+           proxy_pass {{dmzingress.base_url}}/{{clusters.dmz.dashboard.url}}/;
         }
 
         location /v1/admin/ {
