--- a/deployment/sandbox-v2/roles/k8scluster/dashboard/templates/dashboard.yml.j2
+++ b/deployment/sandbox-v2/roles/k8scluster/dashboard/templates/dashboard.yml.j2
@@ -314,11 +314,13 @@ metadata:
     ingress.kubernetes.io/class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /$2
     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
-    nginx.ingress.kubernetes.io/secure-backends: "true"
-    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
+#    nginx.ingress.kubernetes.io/secure-backends: "true"
+#    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
 spec:
   rules:
-  - http:
+  
+  - host: {{sandbox_domain_name}}
+    http:
       paths:
       - path: {{ dashboard_ingress_url }}(/|$)(.*)
         backend:
