--- a/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
+++ b/deployment/sandbox-v2/helm/charts/softhsm/values.template.j2
@@ -1,5 +1,5 @@
 namespace: default
-serviceName: softhsm
+serviceName: softhsm-{{hsm_prop.label}}
 
 activeProfileEnv: mz 
 springConfigLabel: master
@@ -13,21 +13,21 @@ docker:
     containerPort: 5666
     servicePort: 80
 
-confFile: softhsm2.conf
+confFile: {{hsm_prop.conf_file}}
 mountPath: /softhsm  # path inside docker
 
 sc:
-  name: ""
+  name: manual
 pv:
-  name: softhsm-pv
-  size: 10Mi
+  name: softhsm-{{hsm_prop.label}}-pv
+  size: 20Mi
 pvc:
-  name: softhsm-pvc
-  size: 10Mi
+  name: softhsm-{{hsm_prop.label}}-pvc
+  size: 20Mi 
 
-nfs: # Must match nfs server defined via Ansible
+nfs:
   server: console
-  path: /srv/nfs/mosip/softhsm  # The folder must exist
+  path: {{hsm_prop.nfs_path}}
 
 probe:
   initialDelay: 15  # Seconds
